force-app/main/default/objects/ServiceBinding__mdt/ServiceBinding__mdt.object-meta.xml
<CustomObject>
    <description>Maps a logical interface/binding name to a concrete Apex implementation class. Public so subscribers can override bindings (documented extension point).</description>
    <label>Service Binding</label>
    <pluralLabel>Service Bindings</pluralLabel>
</CustomObject>