force-app/main/default/objects/ServiceBinding__mdt/fields/Implementation_Class__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Class__c</fullName>
    <description
  >Apex class name that implements the bound interface.</description>
    <label>Implementation Class</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>