force-app/main/default/objects/ServiceBinding__mdt/fields/Namespace_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Namespace_Prefix__c</fullName>
    <description
  >Optional namespace prefix of the implementation class (for subscriber overrides).</description>
    <label>Namespace Prefix</label>
    <length>15</length>
    <type>Text</type>
</CustomField>